# practice_scraping_py

./: README.md  pyproject.toml
chapter5/wikiSpider/wikiSpider/: items.py  pipelines.py  settings.py
chapter5/wikiSpider/wikiSpider/spiders/: article.py  articles.py  articles_items.py  articles_more_rules.py  articles_pipelines.py  yapfFi7yCe.py
chapter6/: logo.py  mysql.py
