[tool.poetry]
name = "practice_scraping_py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jedi = "^0.19.1"
black = "^23.12.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
bs4 = "^0.0.2"
Scrapy = "^2.11.0"
yapf = "^0.40.2"
ipython = "^8.20.0"
pymysql = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
